# kobo-books-metadata-downloader

./: .gitignore  Cargo.toml  README.md  build.sh  metadata.csv
demo/: metadata.csv
src/: book.rs  main.rs
