[package]
name = "kobo-books-metadata-downloader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
indicatif = "0.17.6"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
